@@ -127,7 +127,8 @@ enum ldns_enum_status {
 	LDNS_STATUS_TYPE_NOT_IN_BITMAP,
 	LDNS_STATUS_INVALID_RDF_TYPE,
 	LDNS_STATUS_RDATA_OVERFLOW,
-	LDNS_STATUS_SYNTAX_SUPERFLUOUS_TEXT_ERR
+	LDNS_STATUS_SYNTAX_SUPERFLUOUS_TEXT_ERR,
+	LDNS_STATUS_NSEC3_DOMAINNAME_OVERFLOW
 };
 typedef enum ldns_enum_status ldns_status;
 
